# Project_Rodet

./: .gitignore  Readme.md  pyproject.toml
frontend/: app.js  index.html  styles.css
scripts/: seed_dummy.py
src/data/: model.joblib  rodet.db
src/rodet/: main.py
src/rodet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rodet/api/: schemas.py
src/rodet/recommend/: car_dictionary.py  dataset.py  model.py
src/rodet/storage/: db.py  schema.sql
tests/: test_health.py
